imperial/ah3918 specific set up

--- a/nextflow.config
+++ b/nextflow.config
@@ -118,6 +118,7 @@ profiles {
         singularity.enabled               = true
         singularity.autoMounts            = true
         docker.enabled                    = false
+        process.container                 = 'quay.io/genepi/imputationserver2:v2.0.7'
     }
     
     slurm {
@@ -125,6 +126,14 @@ profiles {
         singularity.enabled               = true
         singularity.autoMounts            = true
         docker.enabled                    = false
+    }
+
+    imperial {
+        includeConfig 'IMPERIAL_SETUP/imperial.config'
+        singularity.enabled               = true
+        singularity.autoMounts            = true
+        docker.enabled                    = false
+        process.container                 = 'quay.io/genepi/imputationserver2:v2.0.7'
     }
 
    test {
